client: Remove jQuery dependency TODO: Fix broken nav-bar logo & dark mode toggle text

--- a/client/styles/globals.css
+++ b/client/styles/globals.css
@@ -9,4 +9,5 @@ body {
   -khtml-user-select: none;
   -moz-user-select: none;
   -ms-user-select: none;
+  scroll-behavior: smooth;
 }
